# foocat4

./: .readthedocs.yml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat
docs/_build/doctrees/: contributing.doctree  contributors.doctree  environment.pickle  index.doctree  installation.doctree  readme.doctree  usage.doctree
docs/_build/html/: .buildinfo  contributing.html  contributors.html  genindex.html  index.html  installation.html  objects.inv  readme.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: usage.rst.txt
docs/source/: foocat4.rst  modules.rst
foocat4/: foocat4.py
tests/: test_foocat4.py
